case-files/5.4.26/trial.mts.now_wiki_timeline.md
---
url: "https://trial.mts.now/wiki/timeline"
title: "Trial Timeline — MTS Trial Wiki"
---

# Trial Timeline

A day-by-day index. Each row links to a full digest with verbatim quotes and citation lines.

## Week 1

### Day 1 — Mon, Apr 27, 2026

**Jury selection.** Nine jurors empaneled. Not in the source materials; see CNBC, [Judge in Musk v. Altman seats nine-person jury](https://www.cnbc.com/2026/04/27/musk-altman-trial-openai-jury-selection.html).

### Day 2 — Tue, Apr 28, 2026 — digest

**Openings + start of Musk direct.**

- Pretrial: Joshua Achiam allowed to stay as OpenAI's corporate rep. Late-breaking demand for Microsoft/OpenAI amended-contract production.
- Extraordinary on-record colloquy: judge calls Musk to the lectern personally over his "barrage of tweets" during jury selection; secures "clean slate" agreement from Musk, Altman, and Brockman. `(042826TT.txt:697)`
- Three openings:
- **Molo** for plaintiffs — "stole a charity," museum-store analogy.
- **Savitt** for OpenAI — "pageant of hypocrisy"; "tale of two Elons"; the $1B / $38M gap; statute-of-limitations argument.
- **Cohen** for Microsoft — "never picked up the phone"; due-diligence story.
- Musk sworn at 11:59 a.m., direct begins. Covers biography, the Larry Page "speciesist" anecdote, founding OpenAI as a 501(c)(3), recruiting Sutskever, calling Nadella for compute, the 2017 equity-split breakdown.
- Direct stops mid-Exhibit 153.

### Day 3 — Wed, Apr 29, 2026 — digest

**Musk on the stand all day — direct concludes; cross begins.**

- Direct (Molo) walks through PX 156–159 (the September 2017 negotiations and the "I've had enough" email), Musk's three-phase narrative of confidence → discomfort → "they stole the charity," and the October 2022 "bait and switch" text (PX 296).
- Cross (Savitt) is methodical: Tesla's AGI ambitions (DX 1444), the $1B/$38M gap (DX 1025: "I was mistaken"), Musk's own 2015 "C-corp with a parallel nonprofit" email (DX 507), the Dec. 2016 Neuralink email saying nonprofit status "in hindsight, might have been the wrong move" (DX 559), the Haunted Mansion meeting after Dota (DX 642), the "unequivocal control" demand (DX 686), the Karpathy hire (DX 773), the Neuralink-poaching authorization (DX 719), the "OpenAI to attach to Tesla" plan (DX 749), Musk's "zero percent" odds email (DX 853), and the "OK by me" reply on the capped-profit term sheet (DX 806).
- Court chastises spectator Dr. Belitski for taking photos; orders Marshals to confiscate any device found recording. `(042926TT.txt:2655)`
- End of day: court orders 5-page briefs on the § 17510.6 / .8 charitable-solicitation theory. `(042926TT.txt:8498)`

### Day 4 — Thu, Apr 30, 2026 — digest

**Musk concludes; Birchall takes the stand.**

- Pre-jury conference: court excludes any "extinction" testimony from plaintiffs' AI expert Stuart Russell. `(043026TT.txt:712)`
- Musk cross continues on the 2018 capped-profit term sheet ("the infamous purple box"), the 20x and 15x Microsoft redemption multiples, the March 2023 AI-pause letter (signed while xAI was already incorporated), and the February 2025 $97.4B xAI bid for OpenAI's assets (DX 1156, 1157).
- Microsoft cross (Cohen) on the Sept. 2020 tweet.
- Redirect (Molo) — Musk says his Tesla gifts to OpenAI staff were "in appreciation"; that his $38M was "all for the benefit of the charity." `(043026TT.txt:2974)`
- Recross — Musk's "last penny" was 2020.
- **Jared Birchall direct (Kry):** authenticates the $38,191,066 contribution chart (PX 112A); explains YC Org as a tax-status "conduit"; explains the Pioneer Building lease ("Musk Industries" as the lessee LLC); the Tesla gifts; the $250K UBI study donation; and — controversially — the February 2025 xAI-led $97.5B bid, including testimony that Altman was "on both sides of the table" `(043026TT.txt:4718)`.
- **Birchall cross (Wilson):** elicits that Birchall is CFO of the Musk Foundation but doesn't know "the legalities of donor advised funds"; that Musk Industries (not OpenAI) signed the master lease; that Musk wanted "100 percent of the power and authority" over the Pioneer Building (DX 600); that Neuralink shared the building rent-free until OpenAI's auditors raised it (DX 849); that Musk reduced Clark's $3.7M reimbursement ask to $1.25M (DX 857); and that Birchall's "both sides of the table" claim was based only on lawyers and news.
- Day ends with the court launching a post-jury inquiry into whether plaintiffs improperly invoked attorney-client privilege at Musk's deposition while now eliciting the same content live through Birchall — set for May 1 at 10 a.m. `(043026TT.txt:7237)`.

### Day 5 — Fri, May 1, 2026 — digest

**Half-day, no jury, no testimony.** Three big housekeeping pieces:

1. **Motion to strike GRANTED.** Court strikes Birchall's testimony about the Musk/xAI bid: "Given that this gentleman had no personal knowledge, I'm striking the testimony, and I'll instruct the jury to that effect." `(050126TT.txt:339)` Court traces the question to plaintiffs' co-counsel Toberoff and openly admonishes him for letting junior lawyers "take the bus." `(050126TT.txt:360)`
2. **Jury-instructions conference.** Court sides with defendants on § 17510.6 trumping § 17510.8 under _Cohen v. Kabbalah Centre_. Pushes back hard on plaintiffs' attempt to "disentangle" unjust enrichment from restitution: "There is no separate cause of action for unjust enrichment." `(050126TT.txt:1473)`
3. **Witness lineup confirmed for next week**; **audio-only livestream of the trial likely begins Monday** under Local Civil Rule 77-3. `(050126TT.txt:2059)`

## Week 2 (anticipated)

### Mon May 4

- **Stuart Russell** (UC Berkeley AI safety expert) — narrowed by court order to "winner take all" (¶58) plus eight other risks (¶¶59–104); extinction excluded.
- **Greg Brockman** direct begins — first defendant on the stand.

### Tue May 5

- Brockman likely continues.
- Then video depositions (Murati, Microsoft 30(b)(6) Wu).
- **Shivon Zilis** could be called as soon as Tuesday.

### Later in week 2

- **Rosie Campbell** (former OpenAI).
- **Prof. David Schizer** (Columbia Law; nonprofit-law expert) closes plaintiffs' case-in-chief.

## Defense case (no firm dates)

- Sam Altman.
- Microsoft witnesses (Nadella, Scott, Hood, Wetter) under the Rule 50(a) standstill.

## Closings & deliberation

- Plaintiffs 90 min, OpenAI 90 min, Microsoft 30 min. `(042826TT.txt:6206)`
- Trial expected to wrap mid-May.