case-files/5.5.26/trial.mts.now_wiki_timeline.md
---
url: "https://trial.mts.now/wiki/timeline"
title: "Trial Timeline — MTS Trial Wiki"
---

# Trial Timeline

A day-by-day index. Each row links to a full digest with verbatim quotes and citation lines.

## Week 1

### Day 1 — Mon, Apr 27, 2026

**Jury selection.** Nine jurors empaneled. Not in the source materials; see CNBC, [Judge in Musk v. Altman seats nine-person jury](https://www.cnbc.com/2026/04/27/musk-altman-trial-openai-jury-selection.html).

### Day 2 — Tue, Apr 28, 2026 — digest

**Openings + start of Musk direct.**

- Pretrial: Joshua Achiam allowed to stay as OpenAI's corporate rep. Late-breaking demand for Microsoft/OpenAI amended-contract production.
- Extraordinary on-record colloquy: judge calls Musk to the lectern personally over his "barrage of tweets" during jury selection; secures "clean slate" agreement from Musk, Altman, and Brockman. `(042826TT.txt:697)`
- Three openings:
- **Molo** for plaintiffs — "stole a charity," museum-store analogy.
- **Savitt** for OpenAI — "pageant of hypocrisy"; "tale of two Elons"; the $1B / $38M gap; statute-of-limitations argument.
- **Cohen** for Microsoft — "never picked up the phone"; due-diligence story.
- Musk sworn at 11:59 a.m., direct begins. Covers biography, the Larry Page "speciesist" anecdote, founding OpenAI as a 501(c)(3), recruiting Sutskever, calling Nadella for compute, the 2017 equity-split breakdown.
- Direct stops mid-Exhibit 153.

### Day 3 — Wed, Apr 29, 2026 — digest

**Musk on the stand all day — direct concludes; cross begins.**

- Direct (Molo) walks through PX 156–159 (the September 2017 negotiations and the "I've had enough" email), Musk's three-phase narrative of confidence → discomfort → "they stole the charity," and the October 2022 "bait and switch" text (PX 296).
- Cross (Savitt) is methodical: Tesla's AGI ambitions (DX 1444), the $1B/$38M gap (DX 1025: "I was mistaken"), Musk's own 2015 "C-corp with a parallel nonprofit" email (DX 507), the Dec. 2016 Neuralink email saying nonprofit status "in hindsight, might have been the wrong move" (DX 559), the Haunted Mansion meeting after Dota (DX 642), the "unequivocal control" demand (DX 686), the Karpathy hire (DX 773), the Neuralink-poaching authorization (DX 719), the "OpenAI to attach to Tesla" plan (DX 749), Musk's "zero percent" odds email (DX 853), and the "OK by me" reply on the capped-profit term sheet (DX 806).
- Court chastises spectator Dr. Belitski for taking photos; orders Marshals to confiscate any device found recording. `(042926TT.txt:2655)`
- End of day: court orders 5-page briefs on the § 17510.6 / .8 charitable-solicitation theory. `(042926TT.txt:8498)`

### Day 4 — Thu, Apr 30, 2026 — digest

**Musk concludes; Birchall takes the stand.**

- Pre-jury conference: court excludes any "extinction" testimony from plaintiffs' AI expert Stuart Russell. `(043026TT.txt:712)`
- Musk cross continues on the 2018 capped-profit term sheet ("the infamous purple box"), the 20x and 15x Microsoft redemption multiples, the March 2023 AI-pause letter (signed while xAI was already incorporated), and the February 2025 $97.4B xAI bid for OpenAI's assets (DX 1156, 1157).
- Microsoft cross (Cohen) on the Sept. 2020 tweet.
- Redirect (Molo) — Musk says his Tesla gifts to OpenAI staff were "in appreciation"; that his $38M was "all for the benefit of the charity." `(043026TT.txt:2974)`
- Recross — Musk's "last penny" was 2020.
- **Jared Birchall direct (Kry):** authenticates the $38,191,066 contribution chart (PX 112A); explains YC Org as a tax-status "conduit"; explains the Pioneer Building lease ("Musk Industries" as the lessee LLC); the Tesla gifts; the $250K UBI study donation; and — controversially — the February 2025 xAI-led $97.5B bid, including testimony that Altman was "on both sides of the table" `(043026TT.txt:4718)`.
- **Birchall cross (Wilson):** elicits that Birchall is CFO of the Musk Foundation but doesn't know "the legalities of donor advised funds"; that Musk Industries (not OpenAI) signed the master lease; that Musk wanted "100 percent of the power and authority" over the Pioneer Building (DX 600); that Neuralink shared the building rent-free until OpenAI's auditors raised it (DX 849); that Musk reduced Clark's $3.7M reimbursement ask to $1.25M (DX 857); and that Birchall's "both sides of the table" claim was based only on lawyers and news.
- Day ends with the court launching a post-jury inquiry into whether plaintiffs improperly invoked attorney-client privilege at Musk's deposition while now eliciting the same content live through Birchall — set for May 1 at 10 a.m. `(043026TT.txt:7237)`.

### Day 5 — Fri, May 1, 2026 — digest

**Half-day, no jury, no testimony.** Three big housekeeping pieces:

1. **Motion to strike GRANTED.** Court strikes Birchall's testimony about the Musk/xAI bid: "Given that this gentleman had no personal knowledge, I'm striking the testimony, and I'll instruct the jury to that effect." `(050126TT.txt:339)` Court traces the question to plaintiffs' co-counsel Toberoff and openly admonishes him for letting junior lawyers "take the bus." `(050126TT.txt:360)`
2. **Jury-instructions conference.** Court sides with defendants on § 17510.6 trumping § 17510.8 under _Cohen v. Kabbalah Centre_. Pushes back hard on plaintiffs' attempt to "disentangle" unjust enrichment from restitution: "There is no separate cause of action for unjust enrichment." `(050126TT.txt:1473)`
3. **Witness lineup confirmed for next week**; **audio-only livestream of the trial likely begins Monday** under Local Civil Rule 77-3. `(050126TT.txt:2059)`

## Week 2

### Day 6 — Mon, May 4, 2026 — digest · [hits](https://trial.mts.now/wiki/hits-day-6)

**First day of the public audio livestream** under Local Civil Rule 77‑3.

- **Stuart Russell** (UC Berkeley AI safety expert) direct + cross — narrowed by court order to general AI‑risk taxonomy (discrimination, AI psychosis, biorisk, cyber misuse, disinformation, the "cancer-cure" misalignment example, winner-take-all dynamics). Cross by OpenAI (Frentzen) and Microsoft (Gerrada) locked in that he was offering _no opinion_ on OpenAI's actual safety practices, governance, structure, or partnership with Microsoft, and that his $235K compensation is ~20% of his annual income.
- **Greg Brockman** direct begins; cross by **Mr. Kry** unspools the contemporaneous personal journal he kept on his laptop. Lines that broke through: " **This is the only chance we have to get out from under Elon … take me to $1,000,000,000**" (PX 151, Aug 21, 2017); " **morally bankrupt**" / " **if three months later we're doing a B Corp, that it was a lie**" (PX 161, Nov 6, 2017); " **flip to a full profit. Making money for us sounds great**" (PX 163, Nov 12, 2017). Brockman: " **It's an expression of frustration, not a plan**" → Mr. Kry: " **How many times did you rehearse that?**"
- Surfaced in passing: OpenAI for-profit post-money valuation **$840 billion**; Microsoft's stake **~$200 billion**; **IPO under exploration**; OpenAI Foundation (the nonprofit) holds ~ **$150–200B in PBC equity**.
- Brockman ownership stake: **~$30 billion**, acquired in 2018 having paid **$0**. The October 2015 "I'm personally donating $100k" pledge to Marissa Mayer — **never paid**.
- The hidden **$10 million** family-office equity grant from Sam Altman in 2017 (PX 350) that Brockman never disclosed to Musk; Musk forwarded the discovery to Brockman with "??".
- The **Cerebras conflict**: Brockman's March 17, 2017 Cerebras investment, never disclosed to Musk, then carried through to OpenAI's December 2025 deal to buy ~$10B in Cerebras chips (Cerebras valuation **$8B → $23B**).
- On Wachtell's redirect (Mr. Savitt), Brockman flatly denied ever committing to Musk that OpenAI would stay a nonprofit.

### Day 7 — Tue, May 5, 2026 — digest · [hits](https://trial.mts.now/wiki/hits-day-7)

**Brockman's full day on the stand — Day 5 of his testimony total.**

- **Brockman direct continues (Wachtell)** chronologically through 2017–2023: Karpathy poach to Tesla Autopilot, the Dota International victory, the August equity blow-up (Musk's Aug 22 demand for **62.5%**, his Aug 29 storm-out: " **when will you be departing OpenAI?**"), the Sept 12 phone call (PX 154 — " **must tell the story and not lose moral high ground**"), the November 6 entry whose "morally bankrupt" line Brockman reframed as referring to **kicking Musk off the board, not the nonprofit conversion**, the Tesla-merger pitch (" **we should merge OpenAI into Tesla. … It would have to be secret. The shareholders wouldn't like it.**"), the Feb 1 2018 email exchange, Musk's all-hands resignation (" **He said he would not work on safety. … If the sheep are dictating safety and the wolves are not, then there's no purpose.**"), the 2018 IP transfer to OpenAI LP, GPT-1 → GPT-4 milestones, Microsoft rounds, Shivon Zilis IVF/twins disclosure (" **She told me the opposite**"), and the November 17, 2023 eight-minute board call.
- **Microsoft cross** (brief) — Microsoft played no role in 2015 founding, 2017–18 for-profit decisions, or 2019 IP/employee transfer.
- **Mr. Molo recross** — re-walks the journal: " **It's just an after-the-fact manufactured excuse for the very honest emotion that you expressed in the journal at the time.**" The " **$30 billion**" set piece: " **Couldn't you have given the nonprofit some money to carry out its nonprofit activities**?" → " **I did not donate cash to the nonprofit. No.**" The Court takes over the IP-transfer question.
- **Mr. Gerrada redirect — DX 1252 admitted as a prior consistent statement** (FRE 801(d)(1)(B)) over Mr. Molo's hearsay objection. The jury heard Brockman's Nov 5, 2017 entry: " **Real decision is fire Elon. … So we seem converged on the Fire Elon route.**"
- **Robert Wu** OpenAI 30(b)(6) video deposition: **~$250B** total target redemption across all LPs before nonprofit residual; Microsoft's 2023 round at **$60B / 6×**; **20% annual escalator** from 2025; 2023 JDCA licensed Microsoft " **all IP and technology … excluding only AGI**"; **Watershed MOU** would let Microsoft reach product IP after a third-party-panel AGI determination; April–May 2024 "mission strategy committee" was already considering **inverting the LLC waterfall into uncapped corporate stock**; OpenAI Inc. (the nonprofit) **has no full-time employees**.
- **Miss Puckett** authenticates 2018 and 2019 Forms 990.
- **Sealed motion** by Mr. Molo to limit livestream for **Shivon Zilis**'s upcoming testimony (citing security concerns from her four children with Mr. Musk) — **taken under submission**.

### Wed May 6 — anticipated

- **Shivon Zilis** likely takes the stand.
- Possible video depositions (Murati).

### Later in week 2 — anticipated

- **Rosie Campbell** (former OpenAI).
- **Prof. David Schizer** (Columbia Law; nonprofit-law expert) closes plaintiffs' case-in-chief.

## Defense case (no firm dates)

- Sam Altman.
- Microsoft witnesses (Nadella, Scott, Hood, Wetter) under the Rule 50(a) standstill.

## Closings & deliberation

- Plaintiffs 90 min, OpenAI 90 min, Microsoft 30 min. `(042826TT.txt:6206)`
- Trial expected to wrap mid-May.